[package]
name = "subspace-sdk-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# subspace-sdk = { git = "https://github.com/subspace/subspace-sdk"}
# tokio = { version = "1.26", features = ["rt-multi-thread", "macros"] }
sp-core = { version = "21.0.0", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71", features = ["full_crypto"] }
zeroize = "1.6.0"
hex = "0.4.3"
# Error handling
eyre = "0.6"
