[package]
name = "subspace-sdk-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crypto
sp-core = { version = "21.0.0", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71", features = ["full_crypto"] }
zeroize = "1.7.0"
hex = "0.4.3"

# async
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

# JSON serialize, deserialize
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# HTTP API
reqwest = { version = "0.11.24", features = ["json"] }

# Error handling
eyre = "0.6"
chrono = "0.4.35"
